--- a/index.html
+++ b/index.html
@@ -123,16 +123,41 @@
         
       </div>
     </section>
+ 
+      <section id="certificates" data-aos="fade-left" class="py-10 bg-white">
+         <h2 class="text-3xl font-bold text-purple-800 mb-6 text-center">📄 Certificates</h2>
 
-    <section id="certificates" data-aos="fade-left" class="space-y-2">
-      <h2 class="text-3xl font-bold text-purple-800">📄 Certificates</h2>
-      <ul class="space-y-2">
-        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="inline-block h-6 mr-2" />Web Development Bootcamp – Udemy</li>
-        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" class="inline-block h-6 mr-2" />Python for Everybody – Coursera</li>
-        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="inline-block h-6 mr-2" />Frontend Development – Google Career Certificate</li>
-        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="inline-block h-6 mr-2" />Web Development – Coursera</li>
-      </ul>
-    </section>
+          <div class="overflow-x-auto">
+          <div class="flex space-x-4 px-4">
+      
+      <!-- Card 1 -->
+      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="h-10" alt="HTML5" />
+        <p class="text-purple-900 font-medium">Web Development Bootcamp – Udemy</p>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" class="h-10" alt="Python" />
+        <p class="text-purple-900 font-medium">Python for Everybody – Coursera</p>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="h-10" alt="JavaScript" />
+        <p class="text-purple-900 font-medium">Frontend Development – Google Certificate</p>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="h-10" alt="CSS3" />
+        <p class="text-purple-900 font-medium">Web Development – Coursera</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
     <section id="contact" data-aos="fade-up" class="space-y-6">
       <h2 class="text-2xl font-bold text-purple-800 text-center">📞 Contact</h2>
