--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
@@ -122,53 +123,33 @@
         
       </div>
     </section>
- 
-      <section id="certificates" data-aos="fade-left" class="py-10 bg-white">
-         <h2 class="text-3xl font-bold text-purple-800 mb-6 text-center">📄 Certificates</h2>
 
-          <div class="overflow-x-auto">
-          <div class="flex space-x-4 px-4">
-      
-      <!-- Card 1 -->
-      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="h-10" alt="HTML5" />
-        <p class="text-purple-900 font-medium">Web Development Bootcamp – Udemy</p>
-      </div>
+    <section id="certificates" data-aos="fade-left" class="space-y-2">
+      <h2 class="text-3xl font-bold text-purple-800">📄 Certificates</h2>
+      <ul class="space-y-2">
+        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="inline-block h-6 mr-2" />Web Development Bootcamp – Udemy</li>
+        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" class="inline-block h-6 mr-2" />Python for Everybody – Coursera</li>
+        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="inline-block h-6 mr-2" />Frontend Development – Google Career Certificate</li>
+        <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="inline-block h-6 mr-2" />Web Development – Coursera</li>
+      </ul>
+    </section>
 
-      <!-- Card 2 -->
-      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" class="h-10" alt="Python" />
-        <p class="text-purple-900 font-medium">Python for Everybody – Coursera</p>
-      </div>
-
-      <!-- Card 3 -->
-      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="h-10" alt="JavaScript" />
-        <p class="text-purple-900 font-medium">Frontend Development – Google Certificate</p>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="min-w-[250px] bg-purple-100 rounded-2xl shadow-lg p-4 flex items-center space-x-4 transition-transform hover:scale-105">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="h-10" alt="CSS3" />
-        <p class="text-purple-900 font-medium">Web Development – Coursera</p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-
-    <section id="contact" data-aos="fade-up" class="space-y-6">
+     <!-- Contact Section with Thank You Message -->
+     <section id="contact" data-aos="fade-up" class="space-y-6">
       <h2 class="text-2xl font-bold text-purple-800 text-center">📞 Contact</h2>
       <div class="flex justify-center">
-        <form action="https://formspree.io/f/yourformid" method="POST" class="bg-white p-4 rounded-lg shadow-md space-y-2 text-sm w-full max-w-sm">
+        <form onsubmit="showThankYou(event)" class="bg-white p-4 rounded-lg shadow-md space-y-2 text-sm w-full max-w-sm">
           <input type="text" name="name" placeholder="Your Name" class="w-full p-2 border rounded" required />
           <input type="email" name="email" placeholder="Your Email" class="w-full p-2 border rounded" required />
           <textarea name="message" placeholder="Your Message" rows="3" class="w-full p-2 border rounded" required></textarea>
           <button type="submit" class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded w-full">Send</button>
         </form>
       </div>
+      <div id="thankYouMessage" class="text-green-700 font-semibold text-center mt-4 ">
+        ✅ Thank you for contacting!
+      </div>
     </section>
+  </main>
   </main>
 
   <footer class="text-center py-6 text-sm text-gray-600">
