--- a/index.html
+++ b/index.html
@@ -145,9 +145,15 @@
           <button type="submit" class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded w-full">Send</button>
         </form>
       </div>
-      <div id="thankYouMessage" class="text-green-700 font-semibold text-center mt-4 ">
-        ✅ Thank you for contacting!
-      </div>
+     <script>
+         function showThankYou(event) {
+    event.preventDefault(); // Stop form from submitting
+    alert("✅ Thank you for contacting!");
+    // Optionally, clear the form fields:
+    event.target.reset();
+  }
+</script>
+
     </section>
   </main>
   </main>
